Bug 145864 - Submenus in Autofilter Dropdown requires double-click to expand, while in previous versions only single-click is needed
Summary: Submenus in Autofilter Dropdown requires double-click to expand, while in pre...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-11-24 10:26 UTC by Kevin Suo
Modified: 2021-11-25 00:59 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2021-11-24 10:26:02 UTC
If the column contains dates, now I need to double-click to expand the grouped date items, but in ealier versions I only need single-click.

Steps to Reproduce:
1. Open attachment 161790 [details].
2. Click the autofilter dropdown in column B. The dates are grouped. Try to expand the date items.

Current Result:
Requires double-click.

Expected:
Single-click should be able to expand the grouped items.

Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: 06bcff6649be811cf7eacf971e84a0f4ac029b04
CPU threads: 8; OS: Linux 5.14; UI render: default; VCL: gtk3
Locale: zh-CN (zh_CN.UTF-8); UI: zh-CN
Calc: threaded
Comment 1 Kevin Suo 2021-11-24 10:27:16 UTC
Bibisected to range: 6f435016092953478b5636fe9078866500fc7b90..62924b92d6737579cc4709b410d311251d4e5517

This is a wide range because my bibisect builds has skipped those commits until 62924b92d6737579cc4709b410d311251d4e5517 which fixed the --enable-dconf build issue.

I am trying to bisect, but I suspect that the two commits by Caolán related to autofilter popdown/submenu are suspicious.

Adding Caolán McNamara to cc: would you please take a look? Thanks.
Comment 2 Kevin Suo 2021-11-24 13:20:38 UTC
Bisected to

commit 76df910eba2781d19b5d5e72afffae6301ca3c30 (HEAD -> kevin-bisect)
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Fri Nov 19 11:38:58 2021 +0000

    tdf#139460 improve autofilter sub-menu interaction under gtk
    
    so the submenu pops down when the mouse moves back into its parent.
    
    This removes layer of InterimItemWindow and for gtk (under wayland) the
    autofilter and its submenu can use native GtkPopovers
Comment 3 Xisco Faulí 2021-11-24 13:42:13 UTC
Reproduced in

Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: becd76743fd7a3ae84404f26b1afb60b923cabb2
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 4 Caolán McNamara 2021-11-24 15:38:01 UTC
add the mouse motion handler seems to have affected it for some reason
Comment 5 Commit Notification 2021-11-24 19:18:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/da5b1e251ee58eca7a971a3c9312bb9d8bdf7bc4

Resolves: tdf#145864 we should only return true if we consume the motion event

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2021-11-24 19:21:32 UTC
only needs to be fixed in trunk
Comment 7 Kevin Suo 2021-11-25 00:59:20 UTC
Verified fixed. Thank you.