Resolves: tdf#145864 we should only return true if we consume the motion event

and false if we want it to continue to be passed on to other handlers

Change-Id: Ie237f890e3d065949dcfedb08b9f6c804643b4b6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125780
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>